alignment issue

--- a/css/discover.css
+++ b/css/discover.css
@@ -9,7 +9,6 @@ p.list-group-item-text {
 
 span.label-default{
     font-size: 0.9em;
-    min-width: 40%;
     text-align: center;
 }
 
